tests/miniJava/pos/001063_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( this ) while ( 0 ) { } else System.out.println ( { } ) ; } }
