tests/miniJava/neg/005851_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { Main while ( 0 ) { } } }
